[package]
name = "claude-img"
version = "0.1.0"
edition = "2021"
description = "Batch image picker with metadata for Claude Code"

[dependencies]
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
anyhow = "1.0.101"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
