[package]
name = "claude-img"
version = "0.1.0"
edition = "2021"
description = "Native file picker for batch-uploading images to Claude Code conversations"
license = "MIT"
repository = "https://github.com/lazy-poet/claude-img"
keywords = ["claude", "images", "cli", "file-picker"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
anyhow = "1.0.101"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
